# ReportCopillot

./: .gitignore  README.md  main.py  orchestrator.py  pyproject.toml  schemas.py  templates.py
agents/: data_agent.py  diagram_agent.py  research_agent.py  reviewer_agent.py  writer_agent.py
routes/: __init__.py  job_handlers.py  submission_handlers.py  system_handlers.py
services/: __init__.py  job_pdf.py  job_worker.py  submission_service.py
templates/: index.html  job.html
tests/: conftest.py  test_api_run.py  test_cleanup.py  test_lab_data.py  test_orchestrator_repair.py  test_pdf_report_formatting.py  test_plots.py  test_quality_gate.py  test_queue.py  test_request_validation.py  test_retrieval.py  test_state.py  test_upload_validation.py  test_writer_agent.py
testscsvs/: heating_curve.csv  sample.csv
utils/: cleanup.py  files.py  jobs.py  lab_data.py  llm.py  pdf.py  pdf_report.py  pdf_text.py  plots.py  quality_gate.py  queue.py  request_validation.py  retrieval.py  section_validator.py  sections.py  state.py
