[project]
name = "engineering-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.8",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "openai>=2.20.0",
    "pandas>=3.0.0",
    "pytest>=8.4.2",
    "pydantic>=2.12.5",
    "pypdf>=6.7.0",
    "redis>=6.4.0",
    "rq>=2.6.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.9",
    "uvicorn>=0.40.0",
]
